overflow problem solved

--- a/sass/mainStyle.scss
+++ b/sass/mainStyle.scss
@@ -1,94 +1,102 @@
 @import '_reset.scss';
 
+
+.html{
+    font-size: 62.5%;
+}
+
 .mainPage{
-    // min-height: 100vh;
-    width: 100vw;
+    min-height: 100vh;
+    width: 100%;
     display: grid;
-    grid-template-columns: [container-start]1fr [center-start] repeat(6,[col-start] minmax(min-content,16.67rem)[col-end]) [center-end] 1fr[container-end];
-    grid-template-rows: 12vw max-content;
+    grid-template-columns: [container-start]1fr [center-start] repeat(10,[col-start] minmax(min-content,10rem)[col-end]) [center-end] 1fr[container-end];
+    grid-template-rows: 15vh minmax(85vh, min-content);
 
     .mainPage_headerContainer{
-        margin-bottom: 2rem;
+        // margin-bottom: 2rem;
         grid-column: container-start / container-end;
-        display: flex;
-        width: 100%;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-        // position: absolute;
-        // overflow-x: hidden;
+        background-color: aqua;
+        margin-bottom: 2rem;
+        // display: flex;
+        // width: 100%;
+        // flex-direction: column;
+        // justify-content: space-between;
+        // align-items: center;
+        // // position: absolute;
+        // // overflow-x: hidden;
 
         
-        .outerShell{
-            width: 80%;
-            overflow-x: hidden;
-            height: 100%;
-            // border-left:10px solid hsla(0,0%,100%,.5);
-            // border-right:10px solid hsla(0,0%,100%,.5);
+        // .outerShell{
+        //     width: 80%;
+        //     overflow-x: hidden;
+        //     height: 100%;
+        //     // border-left:10px solid hsla(0,0%,100%,.5);
+        //     // border-right:10px solid hsla(0,0%,100%,.5);
 
-            .mainPage_headerContainer_imageContents{
-            position: relative;
-            left: -14%;
-            display: flex;
-            justify-content: center;
-            width: 100vw;
-            height: 100%;
-            padding: 8px;
-            justify-content: space-evenly;
+        //     .mainPage_headerContainer_imageContents{
+        //     position: relative;
+        //     left: -14%;
+        //     display: flex;
+        //     justify-content: center;
+        //     width: 100vw;
+        //     height: 100%;
+        //     padding: 8px;
+        //     justify-content: space-evenly;
 
-            .topics_images_container{
-                height: 100px;
-                width: 200px;
-                // margin-left: 20px;
-                background-size: cover;
-                background-repeat: no-repeat;
-                border-radius: 0.4rem;
+        //     .topics_images_container{
+        //         height: 100px;
+        //         width: 200px;
+        //         // margin-left: 20px;
+        //         background-size: cover;
+        //         background-repeat: no-repeat;
+        //         border-radius: 0.4rem;
 
 
-            }
-        }}
+        //     }
+        // }}
 
-        .outerShell::before{
-            content: '◀️';
-            position: absolute;
-            left: 100px;
-            top: 40px;
-            font-size: xx-large;
-        }
-        .outerShell::after{
-            content: '▶️';
-            position: absolute;
-            right: 100px;
-            top: 40px;
-            font-size: xx-large;
-        }
-        .mainPage_headerContainer_imageDots{
-            display: flex;
-            width: 30%;
-            justify-content: center;
+        // .outerShell::before{
+        //     content: '◀️';
+        //     position: absolute;
+        //     left: 100px;
+        //     top: 40px;
+        //     font-size: xx-large;
+        // }
+        // .outerShell::after{
+        //     content: '▶️';
+        //     position: absolute;
+        //     right: 100px;
+        //     top: 40px;
+        //     font-size: xx-large;
+        // }
+        // .mainPage_headerContainer_imageDots{
+        //     display: flex;
+        //     width: 30%;
+        //     justify-content: center;
             
 
-            .mainPage_headerContainer_imageDots_dots{
-                height: 10px;
-                width: 10px;
-                border: 0.1rem black solid;
-                border-radius: 5px;
-                margin-left: 10px;
-            }
-        }
+        //     .mainPage_headerContainer_imageDots_dots{
+        //         height: 10px;
+        //         width: 10px;
+        //         border: 0.1rem black solid;
+        //         border-radius: 5px;
+        //         margin-left: 10px;
+        //     }
+        // }
     }
 
     &_mainBodyContainer{
-        height: fit-content;
-        grid-column: container-start / container-end;
+        // height: fit-content;
+        grid-column: center-start / center-end;
 
         &_fanclubContainer{
         display: grid;
-        grid-template-columns: repeat(auto-fit,minmax(10rem,1fr));
+        grid-template-columns: repeat(auto-fit,minmax(8rem,1fr));
         grid-auto-rows: min-content;
         justify-items: center;
         align-items: center;
-        grid-gap: 1rem;
+        gap: 1rem;
+        // grid-gap: 1rem;
         // padding: 25px 0;
 
             .fanclub_card{
@@ -107,22 +115,28 @@
         }
 
         &_categoriesContainer{
-            height: max-content;
-            display: flex;
-            flex-direction: column;
-            // grid-auto-rows: auto;
-            // gap: 1rem 0;
-            padding-bottom: 1rem 0;
+            // height: max-content;
+            // display: flex;
+            // flex-direction: column;
+            // // grid-auto-rows: auto;
+            // // gap: 1rem 0;
+            // padding-bottom: 1rem 0;
+            margin-top: 2rem;
+            display: grid;
+            grid-template-rows: repeat(3,min-content);
+            gap: 3rem;
+            align-items: center;
+
 
             .categories_card_container{
-                margin: 2rem;
+                // margin: 2rem 0;
                 display: grid;
                 grid-template-columns: repeat(auto-fit, minmax(8rem,1fr));
                 grid-auto-rows: min-content;
                 justify-items: center;
                 align-items: center;
                 gap: 10px 0px;
-                padding: 1rem 0;
+                padding: 1rem 0 2rem;
 
                 .cats_card{
                     height: 8rem;
